# axum-sqlx-base

./: .env  Cargo.toml  README.md
logs/: app.log.2025-01-21  app.log.2025-01-22  app.log.2025-01-23  app.log.2025-01-24
settings/: default.toml  development.toml
src/: lib.rs  main.rs
src/common/: claim.rs  constant.rs  error.rs  middleware.rs  mod.rs  reponse.rs  role.rs  state.rs
src/common/auth/: key.rs  mod.rs  session.rs  token.rs
src/common/client/: database.rs  mod.rs  redis.rs
src/common/config/: database.rs  env.rs  mod.rs  profile.rs  redis.rs  server.rs  tracing.rs
src/dto/: customer_dto.rs  mod.rs  token_dto.rs
src/entity/: user_entity.rs
src/handlers/: mod.rs  user_handler.rs
src/repository/: user_repository.rs
src/routers/: mod.rs  server.rs  server_router.rs  token_router.rs  user_router.rs
src/services/: mod.rs  user_service.rs
src/utils/: dir.rs  hash.rs  mod.rs  passwor.rs
src/utils/middleware/: limit_state.rs  mod.rs
src/vo/: user_vo.rs
tests/: jwt.rs  static.rs  umya-speadsheet.rs
